src/test/deca/syntax/invalid/parser/oracle/multi_string_block_print.deca
{
	print("Comment
	multi line
	not possible in
	block");
}
